# WebFilmsApi

./: .gitignore  README.md  pyproject.toml
webfilmesapip/: app.py
webfilmesapip/models/: model.py
webfilmesapip/routes/: route.py
webfilmsapi/: app.py
webfilmsapi/config/: db.py
webfilmsapi/dto/: modelDto.py
webfilmsapi/helpers/: verifypassword.py
webfilmsapi/models/: model.py
webfilmsapi/routes/: private_routes.py  privateroutes.py  route.py
webfilmsapi/routes/channels/: delete.py  get.py  post.py  put.py
webfilmsapi/routes/movies/: delete.py  get.py  post.py  put.py
webfilmsapi/routes/private/: private_routes.py
webfilmsapi/routes/series/: delete.py  get.py  post.py  put.py
webfilmsapi/routes/welcome/: route.py
webfilmsapi/schemas/: schema.py
