[project]
name = "webfilmesapip"
version = "0.1.0"
description = ""
authors = [
    {name = "viniciusucanutx",email = "viniciuscanutmz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "pytest (>=8.3.4,<9.0.0)"
]

[tool.poetry.group.dev.dependencies]
pydantic = "^2.10.6"
pymongo = "^4.11.1"
ruff = "^0.9.6"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev webfilmesapip/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=webfilmesapip -vv'
post_test = 'coverage html'

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



